--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "orchid/crud": "*",
+        "orchid/platform": "^14.52"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
